conf/trillium/trillium-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: trillium
  labels:
    app: trillium

spec:
  replicas: 1
  selector:
    matchLabels:
      app: trillium
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: trillium
        version: v0.106.0
    spec:
      containers:
        - name: trillium
          image: triliumnext/trilium:v0.106.0
          ports:
            - containerPort: 8080
              name: trillium-http
          volumeMounts:
            - name: trillium-persistent-storage
              mountPath: /home/node/trilium-data
            # - name: timezone-data
            #   mountPath: /etc/localtime
            #   subPath: localtime
      restartPolicy: Always
      volumes:
        - name: trillium-persistent-storage
          persistentVolumeClaim:
            claimName: trillium-persistent-claim
        # - name: timezone-data
        #   hostPath:
        #     path: /etc/localtime # or /usr/share/zoneinfo/Asia/Shanghai
        #     type: File
