conf/trillium/trillium-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trillium-svc

spec:
  ports:
    - name: trillium-http
      protocol: TCP
      port: 8080
  selector:
    app: trillium
