conf/trillium/trillium-ingress-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect-trillium
  # namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`notes.idcrook.dev`)
      services:
        - name: trillium-svc
          port: 8080
      middlewares:
        - name: redirect-to-https

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-trillium

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`notes.idcrook.dev`)
      services:
        - name: trillium-svc
          port: 8080
      middlewares:
        # - name: kube-system-my-traefik-auth-with-exceptions@kubernetescrd
        - name: tinyauth-tinyauth-middleware@kubernetescrd
  tls:
    certResolver: wildcardresolver
